# typescript_workspace_example

./: .gitignore  README.md  react_ebook.org
Web34x/: README.org  package.json
async_interface_promise_example/: README.org  package.json
axios_basic_example/: README.md  package.json
basic_couter_ts_example/: index.html  package.json
bun_drizzle_orm_example/: .env-template  README.org  drizzle.config.ts  package.json
bun_hono_example/: README.org  eslint.config.mjs  package.json
bun_ipfs_example/: README.org  package.json
bun_min_react_sketch/: .gitignore  README.org  index.html  package.json
bun_nestjs_basic_example/: .gitignore  README.md  README.org  package.json
bun_nestjs_di_example/: README.org  package.json
bun_nestjs_graphql_example/: .gitignore  README.org  graphql-usage-examples.org  notes-api-usage.org  package.json  tsconfig.json
bun_nestjs_long_process_example/: README.org  package.json
bun_nestjs_loop_example/: README.org  app.module.ts  package.json  tsconfig.json
bun_nestjs_serve_static_example/: README.md  package.json  tsconfig.json
bun_nestjs_typeorm_example/: .env_template  README.org  package.json  tsconfig.json
bun_redis_example/: .env.example  README.org  package.json
bun_tanstack_sketch/: .gitignore  README.org  package.json  tsconfig.json
bun_typeorm_basic_example/: .env-template  README.org  package.json
bun_typeorm_nestjs_example/: .env-template  README.org  (+1 more)
deft_basic_example/: Cargo.toml  package.json  webpack.config.js
deft_basic_example/src/: main.rs
deft_basic_example/ui/: app.css  app.tsx  main.ts
(+342 files in other folders)
